--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Desenhe aqui</h1>
+        <h1>DESENHE AQUI</h1>
         <canvas id="canvas"></canvas>
         <div class="tools">
             <button id="pencil">Lápis</button>
