--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
 </head>
 <body>
     <div class="container">
-        <h1>DESENHE AQUI</h1>
+        <h1>V DESENHE AQUI V</h1>
         <canvas id="canvas"></canvas>
         <div class="tools">
             <button id="pencil">Lápis</button>
             <button id="eraser">Borracha</button>
             <input type="color" id="colorPicker" value="#000000">
+            <button id="clearCanvas">Apagar Tudo</button>
+             <h2> SITE FEITO POR PATRICK</h2>
+
         </div>
         <div class="footer">
-            <p>Site feito por Patrick</p>
+            <p></p>
         </div>
     </div>
     <script src="script.js"></script>
