--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>V DESENHE AQUI V</h1>
+        <h1> DESENHE AQUI </h1>
         <canvas id="canvas"></canvas>
         <div class="tools">
             <button id="pencil">Lápis</button>
