--- a/index.html
+++ b/index.html
@@ -16,7 +16,19 @@
             <input type="color" id="colorPicker" value="#000000">
             <button id="clearCanvas">Apagar Tudo</button>
              <h2> SITE FEITO POR PATRICK</h2>
-
+             <div class="tools">
+                <button id="pencil">
+                    <img src="ferramenta-lapis.png" alt="Ícone de lápis">
+                </button>
+                <button id="eraser">
+                    <img src="caminho/do/seu/icone-de-borracha.png" alt="Ícone de borracha">
+                </button>
+                <input type="color" id="colorPicker" value="#000000">
+                <button id="clearCanvas">
+                    <img src="caminho/do/seu/icone-de-limpar.png" alt="Ícone de limpar">
+                </button>
+            </div>
+            
         </div>
         <div class="footer">
             <p></p>
