--- a/index.html
+++ b/index.html
@@ -11,18 +11,10 @@
         <h1> DESENHE AQUI </h1>
         <canvas id="canvas"></canvas>
         <div class="tools">
-            <button id="pencil">
-                <img src="ferramenta-lapis.png" alt="Ícone de lápis">
-            </button>
-            <button id="eraser">
-                <img src="caminho/do/seu/icone-de-borracha.png" alt="Ícone de borracha">
-            </button>
+            <button id="pencil">Lápis</button>
+            <button id="eraser">Borracha</button>
             <input type="color" id="colorPicker" value="#000000">
-            <button id="clearCanvas">
-                <img src="caminho/do/seu/icone-de-limpar.png" alt="Ícone de limpar">
-            </button>
-        </div>
-        
+            <button id="clearCanvas">Apagar Tudo</button>
              <h2> SITE FEITO POR PATRICK</h2>
 
         </div>
