--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
         <h1> DESENHE AQUI </h1>
         <canvas id="canvas"></canvas>
         <div class="tools">
-            <button id="pencil">Lápis</button>
-            <button id="eraser">Borracha</button>
+            <button id="pencil"><img src="ferramenta-lapis.png" alt="Lápis"> Lápis</button>
+            <button id="eraser"><img src="caminho/do/seu/icone-borracha.png" alt="Borracha"> Borracha</button>
             <input type="color" id="colorPicker" value="#000000">
-            <button id="clearCanvas">Apagar Tudo</button>
+            <button id="clearCanvas"><img src="caminho/do/seu/icone-limpar.png" alt="Apagar Tudo"> Apagar Tudo</button>
+          </div>
+          
              <h2> SITE FEITO POR PATRICK</h2>
 
         </div>
