--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <h1> DESENHE AQUI </h1>
         <canvas id="canvas"></canvas>
         <div class="tools">
-            <button id="pencil"><img src="" alt="Lápis"> Lápis</button>
-            <button id="eraser"><img src="caminho/do/seu/icone-borracha.png" alt="Borracha"> Borracha</button>
+            <button id="pencil"><img src="" alt="Lápis"> </button>
+            <button id="eraser"><img src="caminho/do/seu/icone-borracha.png" alt="Borracha"> </button>
             <input type="color" id="colorPicker" value="#000000">
-            <button id="clearCanvas"><img src="caminho/do/seu/icone-limpar.png" alt="Apagar Tudo"> Apagar Tudo</button>
+            <button id="clearCanvas"><img src="caminho/do/seu/icone-limpar.png" alt="Apagar Tudo"> </button>
           </div>
           
              <h2> SITE FEITO POR PATRICK</h2>
