--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1> DESENHE AQUI </h1>
         <canvas id="canvas"></canvas>
         <div class="tools">
-            <button id="pencil"><img src="" alt="Lápis"> </button>
+            <button id="pencil"><img src="ferramenta-lapis.png" alt="Lápis"> </button>
             <button id="eraser"><img src="caminho/do/seu/icone-borracha.png" alt="Borracha"> </button>
             <input type="color" id="colorPicker" value="#000000">
             <button id="clearCanvas"><img src="caminho/do/seu/icone-limpar.png" alt="Apagar Tudo"> </button>
