--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <canvas id="canvas"></canvas>
         <div class="tools">
             <button id="pencil"><img src="ferramenta-lapis.png" alt="Lápis"> </button>
-            <button id="eraser"><img src="caminho/do/seu/icone-borracha.png" alt="Borracha"> </button>
+            <button id="eraser"><img src="borracha.png" alt="Borracha"> </button>
             <input type="color" id="colorPicker" value="#000000">
-            <button id="clearCanvas"><img src="caminho/do/seu/icone-limpar.png" alt="Apagar Tudo"> </button>
+            <button id="clearCanvas"><img src="x.png" alt="Apagar Tudo"> </button>
           </div>
           
              <h2> SITE FEITO POR PATRICK</h2>
