--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="tools">
             <button id="pencil"><img src="ferramenta-lapis.png" alt="Lápis"> </button>
             <button id="eraser"><img src="borracha.png" alt="Borracha"> </button>
-            <input type="color" id="colorPicker" value="#000000">
+            <input type="color"<img src="quadro.png" id="colorPicker" value="#000000">
             <button id="clearCanvas"><img src="x.png" alt="Apagar Tudo"> </button>
           </div>
           
