--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
             <button id="eraser"><img src="borracha.png" alt="Borracha"> </button>
             <input type="color" id="colorPicker" value="#000000">
             <button id="clearCanvas"><img src="x.png" alt="Apagar Tudo"> </button>
+            <div class="color-picker-container">
+                <button id="colorPickerBtn">
+                    <img src="caminho/do/seu/icone-cor.png" alt="Seletor de Cor">
+                </button>
+                <input type="color" id="colorPicker" value="#000000" style="display: none;">
+            </div>            
           </div>
           
              <h2> SITE FEITO POR PATRICK</h2>
