--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
             <button id="clearCanvas"><img src="x.png" alt="Apagar Tudo"> </button>
           </div>
           
-             <h2> SITE FEITO POR PATRICK</h2>
+             <h2> Auto do site: Patrick
+                lapis: selecione para desenhar
+                
+             </h2>
 
         </div>
         <div class="footer"> 
