--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
             <button id="clearCanvas"><img src="x.png" alt="Apagar Tudo"> </button>
           </div>
           
-             <h2> Auto do site: Patrick
-                lapis: selecione para desenhar
-
-             </h2>
+             <h2> clique na caixa para selecionar cor, lapis para desenhar, borracha para apagar o que desejar e X para limpar tudo </h2>
 
         </div>
         <div class="footer"> 
