--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Desenhando no Site</title>
+    <title>Site de Desenho</title>
 </head>
 <body>
     <div class="container">
@@ -17,13 +17,7 @@
             <button id="clearCanvas"><img src="x.png" alt="Apagar Tudo"> </button>
           </div>
           
-             <h2> </h2>
-
-        </div>
-        <div class="footer"> 
-            <p></p>
-        </div>
-    </div>
+             <h2> ola </h2>
     <script src="script.js"></script>
 </body>
 </html>
