--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <button id="eraser"><img src="borracha.png" alt="Borracha"> </button>
             <button id="clearCanvas"><img src="x.png" alt="Apagar Tudo"> </button>
           </div>
-        
+         
+          <script src="script.js"></script>
 </body>
 </html>
